--- a/mailings/templates/mailings_app/includes/inc_base.html
+++ b/mailings/templates/mailings_app/includes/inc_base.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{% if user.is_authenticated %}
+<a class="p-l-2 btn btn-outline-primary" href="#">Выйти</a>
+{% else %}
+<a class="p-l-2 btn btn-outline-primary" href="#">Войти</a>
+<a class="p-l-2 btn btn-outline-primary" href="#">Регистрация</a>
+{% endif %}
+
+<a class="p-l-2 btn btn-outline-primary" href="#">Каталог</a>
+<a class="p-l-2 btn btn-outline-primary" href="#">Категории</a>
+<a class="p-l-2 btn btn-outline-primary" href="#">Контакты</a>
