--- a/mailings/templates/mailings_app/index.html
+++ b/mailings/templates/mailings_app/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<h1>lass="text-center">Здравствуй!</h1>
+<h1 class="text-center">Здравствуй дарагой таваристчь!</h1>
 
 {% endblock %}
