Реализация механизма CRUD для рассылок.

--- a/mailings/templates/mailings_app/index.html
+++ b/mailings/templates/mailings_app/index.html
@@ -2,6 +2,6 @@
 
 {% block content %}
 
-<h1 class="text-center">Здравствуй дарагой таваристчь!</h1>
+<h1 class="text-center">Добро пожаловать на сервис управления рассылками!</h1>
 
 {% endblock %}
