--- a/mailings/templates/mailings_app/includes/inc_base.html
+++ b/mailings/templates/mailings_app/includes/inc_base.html
@@ -6,6 +6,6 @@
 <a class="p-l-2 btn btn-outline-primary" href="#">Регистрация</a>
 {% endif %}
 
-<a class="p-l-2 btn btn-outline-primary" href="#">Каталог</a>
-<a class="p-l-2 btn btn-outline-primary" href="#">Категории</a>
-<a class="p-l-2 btn btn-outline-primary" href="#">Контакты</a>
+<a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:mailings_list' %}">Рассылки</a>
+<a class="p-l-2 btn btn-outline-primary" href="#">Клиенты</a>
+<a class="p-l-2 btn btn-outline-primary" href="#">Блог</a>
