--- a/mailings/templates/mailings_app/includes/inc_base.html
+++ b/mailings/templates/mailings_app/includes/inc_base.html
@@ -7,5 +7,6 @@
 {% endif %}
 
 <a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:mailings_list' %}">Рассылки</a>
-<a class="p-l-2 btn btn-outline-primary" href="#">Клиенты</a>
+<a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:client_list' %}">Клиенты</a>
+<a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:messages_list' %}">Сообщения</a>
 <a class="p-l-2 btn btn-outline-primary" href="#">Блог</a>
