--- a/mailings/templates/mailings_app/message_form.html
+++ b/mailings/templates/mailings_app/message_form.html
@@ -14,9 +14,9 @@
                 <div class="card-header">
                     <div class="card-title">
                         {% if object %}
-                            <h3>Редактирование рассылки</h3>
+                            <h3>Редактирование сообщения</h3>
                         {% else %}
-                            <h3>Добавление рассылки</h3>
+                            <h3>Добавление сообщения</h3>
                         {% endif %}
                     </div>
                 </div>
@@ -35,12 +35,6 @@
                 </div>
             </div>
         </div>
-             <div class="col-2">
-
-             </div>
-
-            <div class="col-1">
-            </div>
 
         </div>
     </form>
