--- a/mailings/templates/mailings_app/message_list.html
+++ b/mailings/templates/mailings_app/message_list.html
@@ -16,7 +16,7 @@
                         </div>
                         <div class="card-body">
 
-                            <p class="card-text">Сообщение: {{object.email}}</p>
+                            <p class="card-text">Сообщение: {{object.message}}</p>
 
 
 
