Добавил, не сломалось!

--- a/users/templates/users_app/user_form.html
+++ b/users/templates/users_app/user_form.html
@@ -20,8 +20,7 @@
                     {% csrf_token %}
                     {{ form.as_p }}
 
-                    <button type="submit" class="btn btn-success">Войти</button>
-                    <a class="p-l-2 btn btn-primary" href="#">Забыли пароль?</a>
+                    <button type="submit" class="btn btn-success">Зарегистрироваться</button>
 
                 </div>
             </div>
