Работа над проектом.

--- a/mailings/templates/mailings_app/mailings_list.html
+++ b/mailings/templates/mailings_app/mailings_list.html
@@ -5,6 +5,7 @@
 <div class="container">
     <div class="text-end">
         <a class="btn btn-outline-secondary" href="{% url 'mailings:mailings_create' %}">Создать рассылку</a>
+        <a class="p-l-2 btn btn-outline-primary" href="{% url 'mailings:logs_list' %}">Логи</a>
     </div>
     <br>
     <div class="row">
