--- a/mailings/templates/mailings_app/message_list.html
+++ b/mailings/templates/mailings_app/message_list.html
@@ -21,7 +21,11 @@
 
 
                             <a href="{% url 'mailings:message_detail' object.pk %}" class="btn btn-primary">Подробнее</a>
-
+                            <div>
+                                <br>
+                                <p>Владелец:</p>
+                                <p>{{object.owner}}</p>
+                            </div>
                         </div>
                         <div class="card-footer">
                             <h6>
