--- a/mailings/templates/mailings_app/message_list.html
+++ b/mailings/templates/mailings_app/message_list.html
@@ -9,7 +9,7 @@
     <br>
     <div class="row">
                 {% for object in object_list %}
-                {% if object.owner == user %}
+<!--                {% if object.owner == user %}-->
                 <div class="col">
                     <div class="card text-center">
                         <div class="card-header">
@@ -37,7 +37,7 @@
 
                     </div>
                 </div>
-                {% endif %}
+<!--                {% endif %}-->
                 {% endfor %}
     </div>
 </div>
