--- a/mailings/templates/mailings_app/logs_list.html
+++ b/mailings/templates/mailings_app/logs_list.html
@@ -3,11 +3,10 @@
 {% block content %}
 <br>
 <div class="container">
-    <div class="text-end">
 
-        {% if object.count > 0 %}
-            <a class="btn btn-light m-3" href="{% url 'mailings:logs_delete' %}">Очистить</a>
-
+        {% if object_list.count > 0 %}
+            <div class="text-end">
+                <a class="btn btn-light m-3" href="{% url 'mailings:logs_delete' %}">Очистить</a>
             </div>
             <br>
             <div class="row">
