--- a/blog/templates/blog_app/blog_detail.html
+++ b/blog/templates/blog_app/blog_detail.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'mailings_app/base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="container">
+    <h1 class="text-center">{{object.title}}</h1>
+    <div class="text-end">
+            <a class="btn btn-outline-secondary" href="{% url 'blog:blog_update' object.pk %}">Редактировать</a>
+            <a class="btn btn-outline-danger" href="{% url 'blog:blog_delete' object.pk %}">Удалить</a>
+    </div>
+
+    <div class="container">
+        <br>
+        <div class="row">
+            <div class="col-3">
+                <div class="card text-center" style="width: 18rem;">
+                    <div class="card-header">
+
+                    </div>
+                    <div class="card-body">
+                        <img src="{{ object.image }}" class="card-img-top" alt="...">
+                    </div>
+
+                    <div class="card-footer">
+                        <p class="text-center">Количество просмотров: {{object.view_count}}</p>
+                        <p class="text-center">Публикация: {{object.created_at}}</p>
+                    </div>
+                </div>
+            </div>
+            <div  class="col-8">
+                <p>
+                    {{object.body}}
+                </p>
+            </div>
+                <div class="col-1">
+
+                </div>
+
+        </div>
+    </div>
+    </div>
+{% endblock %}
