--- a/mailings/templates/mailings_app/index.html
+++ b/mailings/templates/mailings_app/index.html
@@ -20,7 +20,10 @@
                         <p class="card-text">Количество рассылок: {{mailing_count}}</p>
                         <p class="card-text">Из них активных: {{mailing_active_count}}</p>
                         <p class="card-text">Количество уникальных клиентов: {{client_unique}}</p>
-                        <p class="card-text">Некоторые статьи из блога: {{blog_random}}</p>
+                        <p class="card-text">Некоторые статьи из блога:</p>
+                        <p class="card-text">{{blog_1}}</p>
+                        <p class="card-text">{{blog_2}}</p>
+                        <p class="card-text">{{blog_3}}</p>
                     </div>
                     <div class="card-footer">
                         <h6>
