--- a/mailings/templates/mailings_app/mailings_list.html
+++ b/mailings/templates/mailings_app/mailings_list.html
@@ -21,10 +21,12 @@
                         <div class="card-body">
                             <p class="card-text">Старт рассылки: {{object.time_start}}</p>
                             <p class="card-text">Окончание рассылки: {{object.time_end}}</p>
-                            {% if user.is_staff %}
-                                <a href="{% url 'mailings:change_status' object.pk %}" class="btn btn-primary">Изменить статус</a>
-                            {% else %}
+                            {% if user == object.owner %}
                                 <a href="{% url 'mailings:mailings_detail' object.pk %}" class="btn btn-primary">Подробнее</a>
+                            {% else %}
+                                {% if perms.mailings.can_change_status %}
+                                    <a href="{% url 'mailings:mailings_change_status' object.pk %}" class="btn btn-primary">Изменить статус</a>
+                                {% endif %}
                             {% endif %}
                             <div>
                                 <br>
