--- a/blog/templates/blog_app/blog_list.html
+++ b/blog/templates/blog_app/blog_list.html
@@ -21,7 +21,9 @@
                             <div class="card-body">
 
                                 <p class="card-text">{{object.body|slice:":100"}}</p>
-                                <a href="{% url 'blog:blog_detail' object.pk %}" class="btn btn-primary">Подробнее</a>
+                                {% if user.is_authenticated %}
+                                    <a href="{% url 'blog:blog_detail' object.pk %}" class="btn btn-primary">Подробнее</a>
+                                {% endif %}
 
                             </div>
                             <div class="card-footer">
