--- a/mailings/templates/mailings_app/index.html
+++ b/mailings/templates/mailings_app/index.html
@@ -21,9 +21,9 @@
                         <p class="card-text">Из них активных: {{mailing_active_count}}</p>
                         <p class="card-text">Количество уникальных клиентов: {{client_unique}}</p>
                         <p class="card-text">Некоторые статьи из блога:</p>
-                        <p class="card-text">{{blog_1}}</p>
-                        <p class="card-text">{{blog_2}}</p>
-                        <p class="card-text">{{blog_3}}</p>
+                        {% for blog in blog_list %}
+                            <p class="card-text">{{blog}}</p>
+                        {% endfor %}
                     </div>
                     <div class="card-footer">
                         <h6>
